f5_sphinx_theme/static/css/custom.css
/*
 * Copyright 2017 F5 Networks
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
 * Base structure
 */

body {
  padding-top: 0px;
}

/* Header paragraph links */
a.headerlink {
  color: #EBEBEB;
}

a.headerlink:hover {
  color: #0083c0;
}

/*
 * Global add-ons
 */

.sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
.navbar-fixed-top {
  border: 0;
}

/*
 * Sidebar
 */

form.search {
  margin-left: 0px;
}

.sidebar {
  left: 0;
  height: 100%;
  background-color: #EBEBEB;
  font-size: 14px;
  z-index: 0;
}

.sidebar ul {
  padding-left: 15px;
}

/* Hide for mobile, show later */
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    /* top: 126px; */
    border-bottom-right-radius: 6px;
    border-bottom: 1px #4D4F53 solid;
    border-right: 1px #4D4F53 solid;
    bottom: 0;
    left: 0;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
  }
}

/* Sidebar navigation */
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  color: #fff;
  background-color: #428bca;
}

/* Sidebar Search */
form.search {
  margin: 6px;
  padding-bottom: 6px;
}

.search .btn-primary {
  border-radius: 4px;
}
/*
 * Main content
 */

.main {
  padding: 20px;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}
.main .page-header {
  margin-top: 0;
}

/*
* Panels for Tip, See also, Note etc
*/


.admonition {
  border-radius: 4px;
  background-color: white;
  margin-bottom: 20px;
}

ul.last {
  margin-left: 26px;
}

/* Yellow: Attention, Caution, Warning */
.attention, .caution, .warning {
  border: 1px #8a6d3b solid;
  background-color: #fcf8e3;
}

.attention>.admonition-title,
.caution>.admonition-title,
.warning>.admonition-title {
  background-color: #8a6d3b;
  color: white;
  padding: 6px;
}

.attention>.last, .caution>.last, .warning>.last {
  padding: 6px;
}


/* Red */
.danger, .error {
  border: 1px #a94442 solid;
  background-color: #f2dede;
}

.danger>.admonition-title, .error>.admonition-title {
  background-color: #a94442;
  color: white;
  padding: 6px;
}

.danger>.last, .error>.last {
  padding: 6px;
}

/* Green */
.hint {
  border: 1px #3c763d solid;
  background-color: #dff0d8;
}

.hint>.admonition-title {
  background-color: #3c763d;
  color: white;
  padding: 6px;
}

.hint>.last {
  padding: 6px;
}

/* Lt. Blue */
.tip, .note {
  border: 1px #31708f solid;
  background-color: #D9EDF8;
}

.tip>.admonition-title, .note>.admonition-title {
  background-color: #31708f;
  color: white;
  padding: 6px;
}

.tip>.last, .note>.last {
  padding: 6px;
}

/* Blue */
.important, .seealso {
  border: 1px #337ab7 solid;
  background-color: #D9EDF8;
}

.important>.admonition-title, .seealso>.admonition-title {
  color: #fff;
  background-color: #337ab7;
  padding: 6px;
}

.important>.last, .seealso>.last {
  padding: 6px;
}

/* Admonition icons */

.admonition-title:before {
  font-family: "FontAwesome";
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  text-decoration: inherit;
  margin-left: 8px;
  margin-right: 8px;
}
.attention>.admonition-title:before,
.caution>.admonition-title:before,
.warning>.admonition-title:before {
  content: "\f06a";
}

.important>.admonition-title:before,
.note>.admonition-title:before,
.tip>.admonition-title:before,
.hint>.admonition-title:before {
  content: "\f05a";
}

.danger>.admonition-title:before,
.error>.admonition-title:before {
  content: "\f071";
}

/*
 * Tables
 */

th, td {
  padding: 4px;
}

